--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_NAME=aguateria_db
 DB_USER=root
-DB_PASSWORD=050698
+DB_PASSWORD=iHyI6ROVG9mOCErg
 DB_HOST=localhost
 DB_PORT=3306
 DB_LOGGING=false
